--- a/assets/css/checkout.css
+++ b/assets/css/checkout.css
@@ -473,19 +473,19 @@ label[for="shipping_method_0_drive"],
 
 .woocommerce-checkout .moyen-paiement #payment li.wc_payment_method:hover {
     box-shadow: 0 0 10px 0 #aaaaaa;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .woocommerce-checkout .moyen-paiement #payment li.wc_payment_method:before {
     content: "";
     position: relative;
-    background-size: 100% auto!important;
+    background-size: 100% auto !important;
     width: 94px;
     height: 35px;
 }
 
-.woocommerce-checkout .moyen-paiement #payment li.payment_method_stripe .payment_box{
-display: inline-flex;
+.woocommerce-checkout .moyen-paiement #payment li.payment_method_stripe .payment_box {
+    display: inline-flex;
 }
 
 .woocommerce-checkout .moyen-paiement #payment li.payment_method_stripe:before {
@@ -510,11 +510,11 @@ display: inline-flex;
 }
 
 .woocommerce-checkout #payment div.payment_box {
-    background-color: #f5f5f5!important;
+    background-color: #f5f5f5 !important;
     border-radius: 5px;
     padding: 1rem !important;
     font-size: 14px;
-    top: 10px!important;
+    top: 10px !important;
     color: #656565 !important;
     position: relative;
 }
@@ -537,7 +537,7 @@ display: inline-flex;
     border: 2px solid #505050 !important;
 }
 
-#payment .newsletter label.checkbox{
+#payment .newsletter label.checkbox {
     color: #3A3A3A !important;
     font-size: 14px;
     font-weight: 600;
@@ -626,4 +626,19 @@ display: inline-flex;
 
 .shopengine-widget .shopengine-checkout-review-order .woocommerce-checkout-review-order-table tr:last-child .includes_tax .woocommerce-Price-amount.amount {
     font-size: 13px !important;
+}
+
+.shipping-dates {
+    font-size: 15px;
+    width: 100%;
+    font-weight: 600;
+}
+
+.km-checkout-shipping-info {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    color: #3f3f3f;
+    font-family: 'Arca Majora 3', sans-serif;
+    font-size: 15px;
 }
