--- a/assets/css/admin-style.css
+++ b/assets/css/admin-style.css
@@ -27,6 +27,11 @@
   background-color: #e5e5e5;
 }
 
+.transp-label.king-drive {
+  color: #282525;
+  background-color: #BE9D68;
+}
+
 .transp-label.cargomatic {
   color: white;
   background-color: #014617;
